[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "publicdotcom-mcp-server"
version = "0.2.0"
description = "MCP server for the Public.com Trading API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Public.com", email = "developers@public.com" },
]
keywords = ["mcp", "public.com", "trading", "brokerage", "stocks", "options", "crypto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp>=1.0.0",
    "publicdotcom-py~=0.1.11",
    "starlette>=0.27.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[project.scripts]
publicdotcom-mcp-server = "publicdotcom_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/publicdotcom/publicdotcom-mcp-server"
Repository = "https://github.com/publicdotcom/publicdotcom-mcp-server"
Issues = "https://github.com/publicdotcom/publicdotcom-mcp-server/issues"
"Public.com API" = "https://public.com/api"

[tool.hatch.build.targets.wheel]
packages = ["src/publicdotcom_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
